resources/insights-stage/platform-changelog-stage/changelog.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: platform-changelog
  name: platform-changelog
spec:
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    #termination: edge
    termination: reencrypt
  to:
    kind: Service
    name: platform-changelog-oauth-proxy
    weight: 100
  wildcardPolicy: None
